--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.6.1",
     "ngx-bootstrap": "^7.1.0",
+    "prettier": "^2.4.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
